Style: Cliet - Fix styling that cause slider card box shadow to be hidden due to overflow hidden

--- a/client/src/components/TestimonialSlider/testimonialSlider.module.css
+++ b/client/src/components/TestimonialSlider/testimonialSlider.module.css
@@ -1,4 +1,7 @@
 .testimonialContainer {
+  position: relative;
+  left: -2rem;
+  padding: 2rem;
   width: 100%;
   overflow: hidden;
 }
@@ -52,6 +55,10 @@
 }
 
 @media only screen and (max-width: 900px) {
+  .testimonialSlider {
+    column-gap: 10%;
+  }
+
   .testimonialCard {
     flex: 0 0 100%;
   }
